--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "OpenCascade OCE Wrapper for Node js",
   "dependencies": {
-
+      "should": "latest",
+	  "assert": "latest"	  
   },
   "main": "lib/index",
   "engines": { "node": ">= 0.6.13 " }
