* implement Mesh class * implement Mesh.toJSON in Javascript * add Shape.shapeType property * improve  wrapper helper * experiment with STEP  output * creation of sample nodejs REST API server shell

--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
       "should": "latest",
 	  "assert": "latest"	  
   },
-  "main": "lib/index",
+  "main": "lib/occ",
   "engines": { "node": ">= 0.6.13 " }
 }
