--- a/sample/package.json
+++ b/sample/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "3.0.4",
-    "ejs": "*"
+    "ejs": "*",
+    "jailguard":"*",
+     "file-utils": "*"
   }
 }
