--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name":  "node-occ",
-  "version": "0.0.1-1",
+  "version": "0.0.2",
   "description": "OpenCascade OCE Wrapper for Node js",
   "preferGlobal": "true",
   "dependencies": {
