* refactor out script runner and add unit test

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "preferGlobal": "true",
   "dependencies": {
       "should": "latest",
-      "colors": "latest"
+      "colors": "latest",
+      "file-utils": "*"
+ 
   },
   "main": "lib/occ",
   "author": "Etienne Rossignon",
