--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-nodeunit": "~0.1.2",
     "grunt-contrib-uglify": "*",
     "grunt-mocha-cli": "~1.0.1",
+    "grunt-docco": "*",
     "should": "latest"
   },
   "main": "lib/occ",
