--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "file-utils": "*",
     "temporary": "0.0.5",
     "gettemporaryfilepath": "0.0.1",
-    "progress": "~0.1.0"
+    "progress": "~0.1.0",
+    "pace": "0.0.4"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
