--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-occ",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "OpenCascade OCE Wrapper for Node js",
   "preferGlobal": "true",
   "dependencies": {
@@ -38,5 +38,19 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/erossignon/node-occ.git"
-  }
+  },
+  "scripts": {
+    "install": "node-gyp rebuild"
+  },
+  "gypfile": true,
+  "bugs": {
+    "url": "https://github.com/erossignon/node-occ/issues"
+  },
+  "bin": {
+    "node-occ": "STEPtoBREP.js"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "license": "MIT"
 }
