--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "OpenCascade OCE Wrapper for Node js",
   "preferGlobal": "true",
   "dependencies": {
-    "should": "latest",
-    "colors": "latest",
-    "file-utils": "*",
-    "temporary": "0.0.5",
+    "should": "*",
+    "colors": "*",
+    "temporary": "~0.0.5",
     "gettemporaryfilepath": "0.0.1",
     "progress": "~0.1.0",
-    "pace": "0.0.4"
+    "pace": "~0.0.4"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -19,7 +18,7 @@
     "grunt-contrib-uglify": "*",
     "grunt-mocha-cli": "~1.0.1",
     "grunt-docco": "*",
-    "should": "latest"
+    "should": "*"
   },
   "main": "lib/occ",
   "author": "Etienne Rossignon",
@@ -45,9 +44,6 @@
   "gypfile": true,
   "bugs": {
     "url": "https://github.com/erossignon/node-occ/issues"
-  },
-  "bin": {
-    "node-occ": "STEPtoBREP.js"
   },
   "directories": {
     "test": "test"
