--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - "0.10"
 before_install:
-  sudo apt-get install liboce-ocaf-dev liboce-modeling-dev
+  sudo apt-get install liboce-ocaf-dev liboce-modeling-dev liboce-foundation-dev
 
 
