--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,22 @@ node_js:
   - "0.10"
 before_install:
   # sudo apt-get install liboce-ocaf-dev liboce-modeling-dev liboce-foundation-dev ; 
-  grep -i VERSION /usr/include/oce/Standard_Version.hxx
-  cmake --version
+  grep -i VERSION /usr/include/oce/Standard_Version.hxx ;
+  cmake --version ;
+  git clone http://github.com/tpaviot/oce.git ;
+  cd oce ;
+  git checkout tags/OCE-0.13 ;
+  cd .. ;
+  mkdir build_oce;
+  cd build_oce ;
+  cmake -D  OCE_VISUALISATION:BOOLEAN=FALSE -D OCE_DISABLE_X11:BOOLEAN=TRUE -D OCE_USE_PCH:BOOLEAN=TRUE  ../oce ;
+  make -j 6
+  
+  
+
+  
+   
+  
   
 
 
