--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sample/3rdparties/dropzone"]
 	path = sample/3rdparties/dropzone
 	url = https://github.com/enyo/dropzone.git
+[submodule "oce"]
+	path = oce
+	url = https://github.com/tpaviot/oce.git
