--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,15 @@ before_install:
   cd oce ;
   git checkout tags/OCE-0.13 ;
   cd .. ;
+  mkdir deps ;
   mkdir build_oce;
   cd build_oce ;
-  cmake -D  OCE_VISUALISATION:BOOLEAN=FALSE -D OCE_DISABLE_X11:BOOLEAN=TRUE -D OCE_USE_PCH:BOOLEAN=TRUE  ../oce ;
+  cmake -D OCE_INSTALL_PREFIX:STRING=`pwd`/../deps -D OCE_DRAW:BOOLEAN=FALSE -D OCE_OCAF:BOOLEAN=FALSE -D  OCE_BUILD_SHARED_LIB:BOOLEAN=FALSE -D  OCE_VISUALISATION:BOOLEAN=FALSE -D OCE_DISABLE_X11:BOOLEAN=TRUE -D OCE_USE_PCH:BOOLEAN=TRUE  ../oce ;
   make -j 16 ;
+  make install ;
   cd ..
+  ls -R deps
+  
   
   
   
