--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,17 @@ node_js:
 before_install:
   # sudo apt-get install liboce-ocaf-dev liboce-modeling-dev liboce-foundation-dev ; 
   # git clone http://github.com/tpaviot/oce.git ;
+  # cat /proc/cpuinfo ;
   grep -i VERSION /usr/include/oce/Standard_Version.hxx ;
   cmake --version ;
-  cat /proc/cpuinfo ;
   cd oce ;
   git checkout tags/OCE-0.13 ;
   cd .. ;
   mkdir deps ;
   mkdir build_oce;
   cd build_oce ;
-  cmake -D OCE_INSTALL_PREFIX:STRING=`pwd`/../deps -D OCE_DRAW:BOOLEAN=FALSE -D OCE_OCAF:BOOLEAN=FALSE -D  OCE_BUILD_SHARED_LIB:BOOLEAN=FALSE -D  OCE_VISUALISATION:BOOLEAN=FALSE -D OCE_DISABLE_X11:BOOLEAN=TRUE -D OCE_USE_PCH:BOOLEAN=TRUE  ../oce ;
-  make -j 16 ;
+  cmake -D OCE_INSTALL_PREFIX:STRING=`pwd`/../deps -D OCE_DRAW:BOOLEAN=FALSE -D OCE_OCAF:BOOLEAN=FALSE -D  OCE_VISUALISATION:BOOLEAN=FALSE -D OCE_DISABLE_X11:BOOLEAN=TRUE -D OCE_USE_PCH:BOOLEAN=TRUE  ../oce ;
+  make -j 72 ;
   make install ;
   cd ..
   ls -R deps
