--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,16 @@ before_install:
   mkdir build_oce;
   cd build_oce ;
   cmake -D OCE_INSTALL_PREFIX:STRING=`pwd`/../deps -D OCE_DRAW:BOOLEAN=FALSE -D OCE_OCAF:BOOLEAN=FALSE -D  OCE_VISUALISATION:BOOLEAN=FALSE -D OCE_DISABLE_X11:BOOLEAN=TRUE -D OCE_USE_PCH:BOOLEAN=TRUE  ../oce ;
+  make -j 72 TKernel > /dev/null;
+  make -j 72 TKMath > /dev/null;
+  make -j 72 TKG2d > /dev/null;
+  make -j 72 TKGeomBase   > /dev/null;
+  make -j 72 TKG3d > /dev/null;
+  make -j 72 TKPrim > /dev/null;
+  make -j 72 TKBO   > /dev/null;
+  make -j 72 TKBRep   > /dev/null;
   make -j 72 ;
-  make install ;
+  make install > /dev/null  ;
   cd ..
   ls -R deps
   
