--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "colors": "*",
     "gettemporaryfilepath": "0.0.1",
     "grunt-contrib-concat": "~0.5.0",
-    "nan": "^1.3.0",
+    "nan": "1.3.0",
     "pace": "~0.0.4",
     "progress": "~1.1.8",
-    "should": "*",
-    "temporary": "~0.0.8"
+        "temporary": "~0.0.8"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
