--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,12 @@ node_js:
   - "0.11"
   - "0.12"
   - "iojs"
-  
+
+git:
+  submodules: false  
+
+before_install:
+  - git submodule update --depth 50 --init --recursiveœ
 before_install:
   # sudo apt-get install liboce-ocaf-dev liboce-modeling-dev liboce-foundation-dev ; 
   # git clone http://github.com/tpaviot/oce.git ;
