--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,10 +5,10 @@ environment:
     - nodejs_version: "0.12"
 platform:
   - x86
-  - msvs_toolset: 12
+  - msvs_toolset: "12"
 init:
   - git config --global core.autocrlf input
-os: Visual Studio 2012
+os: "Visual Studio 2012"
 configuration:
   - Release
 test_script:
