--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ platform:
 
 init:
   - git config --global core.autocrlf input
-os: "Visual Studio 2012"
+os: "Visual Studio Express 2012 for Windows Desktop"
 configuration:
   - Release
 test_script:
