--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,24 @@
+os:
+  - linux
+# not yet  - osx
+
+sudo: required
+
 language: node_js
+
+env:
+  - CXX=g++-4.8
+
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
+
 node_js:
-  - "0.10"
-  - "0.11"
-  - "0.12"
-  - "iojs"
+  - "4.3"
+  - "5.6"
 
 git:
   submodules: false  
