--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "pace": "~0.0.4",
     "progress": "~1.1.8",
     "temporary": "~0.0.8",
-    "node-pre-gyp": "0.6.x"
+    "node-pre-gyp": "0.6.x",
+    "should": "~11.1.2"
   },
   "devDependencies": {
     "aws-sdk": "2.x",
@@ -24,14 +25,13 @@
     "grunt-docco": "~0.5.0",
     "grunt-mocha-cli": "~3.0.0",
     "mocha": "~3.2.0",
-    "should": "~11.1.2",
     "eslint": "^3.12.2",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-require-path-exists": "^1.1.5",
     "eslint-plugin-standard": "^2.0.1"
   },
-  "main": "lib/occ",
+  "main": "index",
   "author": {
     "name": "Etienne Rossignon"
   },
