--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,6 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - g++-4.8
-    - cmake-2.8.12
 
 before_install:
 # reinstall latest nvm
@@ -65,6 +64,7 @@ before_install:
 - $CXX --version
 
 # compile OCE
+- sudo dpkg -l
 - bash ./prepare_build_occt.sh
 # compile Node-OCC
 - bash ./prepare_node.sh
