--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,30 +19,38 @@ environment:
   VisualStudioVersion: "12"
   matrix:
 
-    - electron_version: "1.4.14"
-      nodejs_version: 6
-      platform: x86
+    # - electron_version: "1.4.14"
+    #   nodejs_version: 6
+    #   platform: x86
 
     - electron_version: "1.4.14"
       nodejs_version: 6
       platform: x64
 
-    - electron_version: "1.6.2"
-      nodejs_version: 6
-      platform: x86
+    # - electron_version: "1.6.10"
+    #   nodejs_version: 6
+    #   platform: x86
 
-    - electron_version: "1.6.2"
+    - electron_version: "1.6.10"
       nodejs_version: 6
       platform: x64
 
-    - nodejs_version: 6
-      platform: x86
+    # - electron_version: "1.6.10"
+    #   nodejs_version: 7.4
+    #   platform: x86
+
+    - electron_version: "1.6.10"
+      nodejs_version: 7.4
+      platform: x64
+
+    # - nodejs_version: 6
+    #   platform: x86
 
     - nodejs_version: 6
       platform: x64
 
-    - nodejs_version: 7
-      platform: x86
+    # - nodejs_version: 7
+    #   platform: x86
 
     - nodejs_version: 7
       platform: x64
@@ -83,7 +91,7 @@ install:
 
 
 - cmd: npm install mocha node-pre-gyp-github -g
-- cmd: build_oce.bat %PLATFORM%
+# - cmd: build_oce.bat %PLATFORM%
 - cmd: build.bat %PLATFORM%
 
 
@@ -92,11 +100,8 @@ build_script:
 # - npm install --build-from-source --target_arch=%npm_config_arch%
 
 cache:
-  - c:\projects\node-occ\build_oce_2013_Win64
-  - c:\projects\node-occ\build_oce_2013_Win32
-  - c:\projects\node-occ\build_oce_2015_Win64
-  - c:\projects\node-occ\build_oce_2015_Win32
-  - c:\OCE-0.18
+  - c:\projects\node-occ\occt-7.1.0
+
 
 configuration:
   - Release
@@ -116,5 +121,3 @@ after_test:
 deploy: off
 
 build: off
-
-
