improve on appveyor building

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -91,7 +91,7 @@ install:
 
 
 # - cmd: npm install mocha node-pre-gyp-github -g
-- cmd: setenv.bat %PLATFORM%
+- cmd: setenv.bat 64
 - cmd: build.bat %PLATFORM%
 
 
