--- a/appveyor.yml
+++ b/appveyor.yml
@@ -118,7 +118,8 @@ after_test:
   - IF %PUBLISH_BINARY% == 1        (node-pre-gyp package 2>&1)
   - # IF %PUBLISH_BINARY% == 1        (node-pre-gyp publish 2>&1)
   - # IF %PUBLISH_BINARY% == 1        (node-pre-gyp-github publish --release 2>&1)
-  - IF %PUBLISH_BINARY% == 1        (node-pre-gyp-github publish  2>&1)
+  - IF %PUBLISH_BINARY% == 1        (node-pre-gyp-github publish)
+  -  # IF %PUBLISH_BINARY% == 1        (node-pre-gyp-github publish  2>&1)
   - IF %PUBLISH_BINARY% == 1        (node-pre-gyp clean)
   - IF %PUBLISH_BINARY% == 1        (npm install --fallback-to-build=false)
 
