--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-occ",
   "version": "0.2.0",
-  "description": "OpenCascade OCE Wrapper for Node js",
+  "description": "OpenCascade OCCT Wrapper for Node js",
   "preferGlobal": "true",
   "dependencies": {
     "async": "^2.4.1",
