test with nodejs 8

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ before_install:
 # use g++ on linux
 - if [[ $TRAVIS_OS_NAME == "linux" ]]; then export CXX=g++-4.8; fi
 - $CXX --version
-
+- npm install -g node-pre-gyp-github node-pre-gyp
 
 # compile Node-OCC
 - bash ./prepare_node.sh
