--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/erossignon/node-occ.git"
+    "url": "https://github.com/openwebcad/node-occ.git"
   },
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
@@ -60,12 +60,12 @@
     "module_name": "occ",
     "module_path": "./lib/binding/",
     "host-aws": "https://nodeocc.s3-us-west-1.amazonaws.com",
-    "host": "https://github.com/erossignon/node-occ/releases/download/",
+    "host": "https://github.com/openwebcad/node-occ/releases/download/",
     "remote_path": "{version}"
   },
   "gypfile": true,
   "bugs": {
-    "url": "https://github.com/erossignon/node-occ/issues"
+    "url": "https://github.com/openwebcad/node-occ/issues"
   },
   "directories": {
     "test": "test"
