fix eslint issues remove unneeded submodules

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
   - TRAVIS_NODE_VERSION="7"
   #- TRAVIS_NODE_VERSION="7" ARCH="x86"
   #- TRAVIS_ELECTRON_VERSION="1.4.14" TRAVIS_NODE_VERSION="6"
+  - TRAVIS_NODE_VERSION="8"
 
 matrix:
   exclude:
@@ -24,6 +25,8 @@ matrix:
     env: TRAVIS_NODE_VERSION="6" ARCH="x86"
   - os: osx
     env: TRAVIS_NODE_VERSION="7"
+  - os: osx
+    env: TRAVIS_NODE_VERSION="8"
   #- os: osx
   # env: TRAVIS_NODE_VERSION="7" ARCH="x86"
 
