--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "parserOptions": {
-   //xx "ecmaVersion": 6
+    "ecmaVersion": 6
   },
   "extends": [
   //  "standard"
@@ -15,7 +15,10 @@
     "rules": {
         "no-var": ["error"],
         "quotes": ["error", "double"],
-        "indent": ["error", 4],
+      "indent": [
+        "error",
+        4
+      ]
 /*
         "padded-blocks": ["error", "always"],
         "arrow-parens": [2, "as-needed", {"requireForBlockBody": true }],
