work in progress : compilation on mac #29

--- a/.travis.yml
+++ b/.travis.yml
@@ -80,6 +80,7 @@ script:
 - >
   if [[ -z $TRAVIS_ELECTRON_VERSION ]]; then
     export LD_LIBRARY_PATH=`pwd`/occt-7.1.0./lib
+    export DYLD_LIBRARY_PATH=`pwd`/occt-7.1.0./lib
     node ./
     npm test
   else
