--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-occ",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "OpenCascade OCCT Wrapper for Node js",
   "preferGlobal": "true",
   "dependencies": {
@@ -14,9 +14,11 @@
   },
   "devDependencies": {
     "aws-sdk": "2.x",
-    "electron-rebuild": "^1.5.11",
-    "eslint": "^4.1.1",
+    "electron-rebuild": "^1.6.0",
+    "eslint": "^4.5.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-require-path-exists": "^1.1.7",
     "eslint-plugin-standard": "^3.0.1",
@@ -26,7 +28,7 @@
     "grunt-contrib-uglify": "3.0.1",
     "grunt-docco": "~0.5.0",
     "grunt-mocha-cli": "~3.0.0",
-    "mocha": "~3.4.2",
+    "mocha": "~3.5.0",
     "should": "~11.2.1"
   },
   "main": "index",
