--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
   #- TRAVIS_NODE_VERSION="7" ARCH="x86"
   #- TRAVIS_ELECTRON_VERSION="1.4.14" TRAVIS_NODE_VERSION="6"
   - TRAVIS_NODE_VERSION="8"
+  - TRAVIS_NODE_VERSION="9"
 
 matrix:
   exclude:
@@ -27,6 +28,8 @@ matrix:
     env: TRAVIS_NODE_VERSION="7"
   - os: osx
     env: TRAVIS_NODE_VERSION="8"
+  - os: osx
+    env: TRAVIS_NODE_VERSION="9"
   #- os: osx
   # env: TRAVIS_NODE_VERSION="7" ARCH="x86"
 
