--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "description": "OpenCascade OCCT Wrapper for Node js",
   "preferGlobal": "true",
   "dependencies": {
-    "async": "^2.5.0",
+    "async": "^2.6.0",
     "colors": "*",
     "gettemporaryfilepath": "1.0.0",
-    "nan": "^2.6.2",
-    "node-pre-gyp": "^0.6.36",
+    "nan": "^2.8.0",
+    "node-pre-gyp": "^0.6.39",
     "pace": "~0.0.4",
     "progress": "~2.0.0"
   },
   "devDependencies": {
     "aws-sdk": "2.x",
-    "electron-rebuild": "^1.6.0",
-    "eslint": "^4.5.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
+    "electron-rebuild": "^1.7.3",
+    "eslint": "^4.16.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-require-path-exists": "^1.1.7",
     "eslint-plugin-standard": "^3.0.1",
     "grunt": "^1.0.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-nodeunit": "~1.0.0",
-    "grunt-contrib-uglify": "3.0.1",
+    "grunt-contrib-uglify": "3.3.0",
     "grunt-docco": "~0.5.0",
-    "grunt-mocha-cli": "~3.0.0",
-    "mocha": "~3.5.0",
-    "should": "~11.2.1"
+    "grunt-mocha-cli": "~4.0.0",
+    "mocha": "~5.0.0",
+    "should": "~13.2.1"
   },
   "main": "index",
   "author": {
