--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "async": "^2.6.0",
     "colors": "*",
     "gettemporaryfilepath": "1.0.0",
-    "nan": "^2.8.0",
-    "node-pre-gyp": "^0.6.39",
+    "nan": "^2.10.0",
+    "node-pre-gyp": "^0.9.0",
     "pace": "~0.0.4",
     "progress": "~2.0.0"
   },
   "devDependencies": {
     "aws-sdk": "2.x",
     "electron-rebuild": "^1.7.3",
-    "eslint": "^4.16.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint": "^4.19.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-require-path-exists": "^1.1.7",
     "eslint-plugin-standard": "^3.0.1",
-    "mocha": "~5.0.0",
+    "mocha": "~5.0.4",
     "should": "~13.2.1"
   },
   "main": "index",
