--- a/.travis.yml
+++ b/.travis.yml
@@ -82,8 +82,8 @@ install:
 script:
 - >
   if [[ -z $TRAVIS_ELECTRON_VERSION ]]; then
-    export LD_LIBRARY_PATH=`pwd`/occt-7.1.0./lib
-    export DYLD_LIBRARY_PATH=`pwd`/occt-7.1.0./lib
+    export LD_LIBRARY_PATH=`pwd`/occt-7.2.0/lib
+    export DYLD_LIBRARY_PATH=`pwd`/occt-7.2.0/lib
     node ./
     npm test
   else
