--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "url": "https://github.com/openwebcad/node-occ.git"
   },
   "scripts": {
-    "preinstall": "./build.sh --only-prepare",
+    "preinstall": "node build.js",
     "install": "node-pre-gyp install --fallback-to-build",
     "test": "mocha -R spec",
     "lint": "eslint lib test bin",
