add  node v9 & v10 in travis & appveyor

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
   #- TRAVIS_ELECTRON_VERSION="1.4.14" TRAVIS_NODE_VERSION="6"
   - TRAVIS_NODE_VERSION="8"
   - TRAVIS_NODE_VERSION="9"
+  - TRAVIS_NODE_VERSION="10"
 
 matrix:
   exclude:
