--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,6 +36,12 @@ environment:
     - nodejs_version: 8
       platform: x64
 
+    - nodejs_version: 9
+      platform: x64
+  
+    - nodejs_version: 10
+      platform: x64
+
     # - electron_version: "1.4.14"
     #   nodejs_version: 6
     #   platform: x86
@@ -55,7 +61,6 @@ environment:
     # - electron_version: "1.6.10"
     #   nodejs_version: 7.4
     #   platform: x86
-
 
 
 # clone directory
