--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-require-path-exists": "^1.1.9",
     "eslint-plugin-standard": "^4.0.1",
-    "mocha": "~6.2.2",
+    "mocha": "^6.2.2",
     "should": "~13.2.3"
   },
   "main": "index",
