remove obsolete version of electron

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,17 +49,17 @@ environment:
     #   nodejs_version: 6
     #   platform: x86
 
-    - electron_version: "1.4.14"
-      nodejs_version: 6
-      platform: x64
+    # - electron_version: "1.4.14"
+    #   nodejs_version: 6
+    #   platform: x64
 
     # - electron_version: "1.6.10"
     #   nodejs_version: 6
     #   platform: x86
 
-    - electron_version: "1.6.10"
-      nodejs_version: 6
-      platform: x64
+    # - electron_version: "1.6.10"
+    #   nodejs_version: 6
+    #   platform: x64
 
     - electron_version: "7.0.0"
       nodejs_version: 12
